--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -5,7 +5,7 @@
 		<h1>{{ 'legalNotice.mainHead' | translate}}</h1>
 
 		<div class="back-btn">
-			<a href="#contact"><img src="assets/ProjectsImg/Back 1.png" alt="" />{{ 'button.backBtn' | translate}}</a>
+			<a href="#contact">{{ 'button.backBtn' | translate}}</a>
 		</div>
 
 		<h2>{{ 'legalNotice.headOne' | translate}}</h2>
