--- a/src/app/main-content/colleagues/colleagues.component.html
+++ b/src/app/main-content/colleagues/colleagues.component.html
@@ -1,17 +1,21 @@
-<section>
-	<div class="content">
-		<div class="arrow-main">
-			<!-- <div class="arrow">
-			</div> -->
-			<h3>{{ 'colleagues.intheirwords' | translate }}</h3>
+<section class="testimonials-section">
+	<div class="max-container">
+
+		<div class="section-header">
+			<p class="overline">{{ 'colleagues.intheirwords' | translate }}</p>
+			<h2 class="main-heading">{{ 'colleagues.thoughts' | translate }}</h2>
+			<div class="purple-divider"></div>
 		</div>
-		<h2>{{ 'colleagues.thoughts' | translate }}</h2>
-		<div class="colleagues-main">
-			<div class="colleagues-main">
-				<app-single-info id="person1" *ngIf="person1" [singleperson]="person1"></app-single-info>
-				<app-single-info id="person2" *ngIf="person2" [singleperson]="person2"></app-single-info>
-				<app-single-info id="person3" *ngIf="person3" [singleperson]="person3"></app-single-info>
-			</div>
+
+		<div class="testimonials-grid">
+			<app-single-info *ngIf="person1" [singleperson]="person1" class="testimonial-card color-1">
+			</app-single-info>
+
+			<app-single-info *ngIf="person2" [singleperson]="person2" class="testimonial-card color-2">
+			</app-single-info>
+
+			<app-single-info *ngIf="person3" [singleperson]="person3" class="testimonial-card color-3">
+			</app-single-info>
 		</div>
 	</div>
 </section>
