--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,42 +1,41 @@
-<footer>
+<footer class="main-footer">
+	<div class="footer-container">
 
-	<div class="myName">
-		<div class="logo-img">
-			<img src="assets/Extras/LOGONEU.png" alt="">
+		<div class="footer-logo-section">
+			<div class="logo-wrapper">
+				<img src="assets/Extras/LOGONEU.png" alt="Logo">
+			</div>
+			<p class="copyright-text">&copy; Marcus Gühne 2026</p>
 		</div>
-		<div class="owner-info">
-			<p>&copy; Marcus Gühne 2025</p>
-			<li>
-				<a class="legal-footer-mobile" href="imprint">{{ 'footer.footerHead' | translate}}</a>
-			</li>
+
+		<div class="footer-content-section">
+
+			<div class="info-top">
+				
+				<a href="imprint" target="_blank" class="legal-link">
+					{{ 'footer.footerHead' | translate }}
+				</a>
+				<span class="divider">|</span>
+			</div>
+
+			<nav class="social-bottom">
+				<a href="https://github.com/Prodigy2103" target="_blank" class="social-item">
+					<img src="assets/Extras/Github.png" alt="" class="social-icon">
+					<span>Github</span>
+				</a>
+
+				<a href="https://www.linkedin.com/in/robert-marcus-g%C3%BChne-a53a63385/" target="_blank"
+					class="social-item">
+					<img src="assets/Extras/icons8-linkedin-52.png" alt="" class="social-icon">
+					<span>LinkedIn</span>
+				</a>
+
+				<a href="mailto:marcusghne@gmx.de" class="social-item">
+					<img src="assets/Extras/Contact.png" alt="" class="social-icon">
+					<span>Email</span>
+				</a>
+			</nav>
+
 		</div>
 	</div>
-
-	<nav>
-		<li>
-			<a class="legal-footer" href="imprint">{{ 'footer.footerHead' | translate}}</a>
-		</li>
-
-		<li>
-			<a class="footer-btn" href="https://github.com/Prodigy2103" target="_blank">
-				<p>Github</p>
-				<img src="assets/Extras/Github.png" alt="">
-			</a>
-		</li>
-
-		<li>
-			<a class="footer-btn" href="https://www.linkedin.com/in/robert-marcus-g%C3%BChne-a53a63385/" target="blank">
-				<p>LinkedIn</p>
-				<img src="assets/Extras/icons8-linkedin-52.png" alt="">
-			</a>
-		</li>
-
-		<li>
-			<a class="footer-btn" href="mailto:marcusghne@gmx.de">
-				<p>Email</p>
-				<img src="assets/Extras/Contact.png" alt="">
-			</a>
-		</li>
-	</nav>
-
 </footer>
