--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,36 +1,25 @@
-<section id="about">
-	<div class="content">
-		<div class="about-basic">
-			@for (info of aboutInfo; track info.translationKey) {
-			<div [class]="info.class">
-				<img [src]="info.background" [alt]="info.alt">
-				<div [class]="info.containerClass">
-					<img [src]="info.icon" [alt]="info.iconAlt">
-					<p>{{ info.translationKey | translate }}</p>
-				</div>
-			</div>
-			}
-		</div>
+<section id="about" class="about-section">
+	<div class="container">
 
-		<div class="about-info">
-			<div class="owner-info">
-				<p class="owner-paragraph">{{ 'about.title' | translate }}</p>
-				<div class="head">
-					<h1>{{ 'about.privacyline' | translate }}</h1>
-				</div>
-			</div>
-
-			<div class="desc-btn">
-				<div class="owner-description">
-					<p [innerHTML]="'about.description' | translate"></p>
-				</div>
-
-				<div class="talk-btn">
-					<button class="btn-default">
-						<a href="#contact">{{ 'button.talkBtn' | translate }}</a>
-					</button>
-				</div>
+		<div class="cards-side">
+			<div *ngFor="let info of aboutInfo" [class]="'info-card ' + info.colorClass">
+				<i [class]="info.icon"></i>
+				<span>{{ info.translationKey | translate }}</span>
 			</div>
 		</div>
+
+		<div class="text-side">
+			<p class="subtitle">{{ 'about.title' | translate }}</p>
+			<h2 class="title">{{ 'about.privacyline' | translate }}</h2>
+			<div class="divider"></div>
+
+			<p class="description"  [innerHTML]="'about.description' | translate">
+			</p>
+
+			<a href="#contact" class="btn-talk">
+				{{ 'button.talkBtn' | translate }}
+			</a>
+		</div>
+
 	</div>
 </section>
