--- a/src/app/main-content/colleagues/single-info/single-info.component.scss
+++ b/src/app/main-content/colleagues/single-info/single-info.component.scss
@@ -1,123 +1,70 @@
-@use './../../../../../public/styles/all_styles.scss' as all;
+:host {
+	display: block;
+	height: 100%;
+}
 
-.person-comment {
-	position: relative;
-	@include all.size($w: 100%);
-	max-width: 37rem;
-	min-height: 24.5rem;
-	background-image: url('./../../../../../public/assets/03_Stickers/02_Testimonials/Color option 2/A.png');
-	@include all.bg-setup();
-	@include all.fl($jc: center, $alit: start, $flexdir: column, $gap: 4rem);
-	padding: 3rem;
-
+.card-body {
+	background-color: var(--card-bg);
+	border-radius: 2rem; // rounded-3xl
+	padding: 2rem; // p-8
+	min-height: 24rem; // min-h-96
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	cursor: pointer;
+	box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1); // shadow-xl
+	transition: transform 0.3s ease;
 
 	&:hover {
-		background-image: url('./../../../../../public/assets/03_Stickers/02_Testimonials/Color option 3/Line.png'), url('./../../../../../public/assets/03_Stickers/02_Testimonials/Color option 2/A.png');
-		z-index: 5;
+		// Dreht die Karte leicht nach links (wie im Tailwind-Code: -rotate-2)
+		transform: rotate(-2deg) scale(1.02);
+		box-shadow: 0 25px 30px -5px rgba(0, 0, 0, 0.3);
+	}
+}
+
+.quote {
+	color: #000000;
+	font-size: 0.875rem;
+	line-height: 1.625; // leading-relaxed
+	font-weight: 500;
+}
+
+.profile-footer {
+	margin-top: auto;
+	padding-top: 1.5rem;
+	border-top: 2px solid rgba(0, 0, 0, 0.1); // border-t-2 border-black/20
+
+	h3 {
+		color: #000000;
+		font-weight: 700;
+		font-size: 1.125rem; // text-lg
+		margin: 0;
 	}
 
-	.person-link {
-		@include all.fl($jc: space-between, $alit: center);
-		width: 100%;
+	.position {
+		color: rgba(0, 0, 0, 0.7); // text-black/70
+		font-size: 0.875rem;
+		margin-bottom: 1rem;
+	}
+}
+
+.linkedin-link {
+	display: inline-flex;
+	align-items: center;
+	gap: 0.5rem;
+	color: #000000;
+	text-decoration: none;
+	font-size: 0.875rem;
+	font-weight: 500;
+	transition: color 0.2s;
+
+	&:hover {
+		color: rgba(0, 0, 0, 0.7);
 	}
 
-	.logo-link {
-		@include all.fl($alit: center);
-
-		a {
-			font-size: 1.1rem;
-		}
-	}
-
-	.name-block {
-		h3 {
-			font-size: 1.5rem;
-		}
-
-		span {
-			font-size: 1rem;
-		}
-	}
-
-	.colleague-quote {
-		font-size: 1.1rem;
-	}
-
-	@include all.notebook {
-		max-width: 30rem;
-		padding: 2.5rem;
-	}
-
-	@include all.tablet {
-		max-width: 90%;
-		padding: 2rem;
-		gap: 3rem;
-
-		.name-block {
-			h3 {
-				font-size: 1.3rem;
-			}
-
-			span {
-				font-size: 1rem;
-			}
-		}
-
-		.colleague-quote {
-			font-size: 1rem;
-		}
-	}
-
-	@include all.mobile {
-		max-width: 280px;
-		margin: 0 auto;
-		padding: 1rem 0.75rem;
-		gap: 0.8rem;
-		min-height: auto;
-		background-size: 100% 100%;
-
-		.colleague-quote {
-			font-size: 1rem;
-		}
-
-		.person-link {
-			flex-direction: column;
-			align-items: flex-start;
-			gap: 0.5rem;
-		}
-
-		.name-block {
-			h3 {
-				font-size: 1.1rem;
-			}
-
-			span {
-				font-size: 1rem;
-			}
-		}
-	}
-
-	.logo-link {
-		max-width: 100%;
-
-		span {
-			color: white;
-
-			a {
-				font-size: 1rem;
-				display: block;
-				word-break: break-word;
-				color: white;
-
-				&:hover {
-					color: #2a4cf7;
-				}
-			}
-
-			img {
-				width: 24px;
-				height: 24px;
-			}
-		}
+	img {
+		width: 1rem;
+		height: 1rem;
+		filter: brightness(0); // Icon schwarz machen
 	}
 }
